<?xml version="1.0"?>
<package format="2">
  <name>nrt_software</name>
  <version>0.0.0</version>
  <description>The nrt_software package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="user@todo.todo">user</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/nrt_software</url> -->


  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend> <!-- all programs -->
  <depend>robot_class_ros_extension</depend> <!-- all programs -->
  <depend>robot_class_xbot</depend> <!-- all programs -->
  <depend>robot_class</depend> <!-- all programs -->

  <depend>visualization_tools</depend> <!-- optional -->

  <depend>point_handling</depend> <!--TRAJECTORY_GENERATION -->
  <depend>hierarchical_control</depend> <!--TRAJECTORY_GENERATION -->
  <!-- <depend>collision_model_ros_extension</depend> TRAJECTORY_GENERATION -->
  <!-- <depend>reference_generation</depend> TRAJECTORY_GENERATION -->

  <depend>message_generation</depend> <!--COLLISION_MODEL -->
  <depend>std_msgs</depend> <!--COLLISION_MODEL -->

  <depend>gravity_compensation</depend> <!-- CENTRALIZED_CONTROLLER -->
  <depend>motor_side_reference</depend> <!-- CENTRALIZED_CONTROLLER -->
  <depend>std_srvs</depend> <!--CENTRALIZED_CONTROLLER -->

  <!--<depend>hierarchical_control</depend>--> <!-- CENTER_OF_MASS_CONTROLLER -->
  <depend>robot_point_handling</depend> <!--CENTER_OF_MASS_CONTROLLER/VISUALIZATION_TOOLS -->
  <depend>custom_services</depend> <!--CENTER_OF_MASS_CONTROLLER/VISUALIZATION_TOOLS -->
  <depend>controllers</depend> <!--CENTER_OF_MASS_CONTROLLER/VISUALIZATION_TOOLS -->
  <depend>communication</depend> <!--CENTER_OF_MASS_CONTROLLER/VISUALIZATION_TOOLS -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
